# AMPER

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  generate_and_run.sh  package.xml  run.sh
action/: MoveForward.action  TurnRight.action
docs/figures/: architecture.drawio
launch/: dummy.launch  simulation.launch
rviz/: robot.rviz
scripts/: world-generation.py
src/: const_labyrinth.hpp  labyrinth.hpp  path.cpp  path_finding.cpp  path_finding.hpp  robot_control.cpp  robot_controller.cpp  types.cpp  types.hpp
src/AMPER/: CMakeLists.txt  package.xml
src/AMPER/action/: Move.action
src/AMPER/docs/figures/: architecture.drawio.xml
src/AMPER/launch/: dummy.launch  simulation.launch
src/AMPER/scripts/: maze_gen.py  world_generation.py  world_launch.py  world_launch_config.py
src/AMPER/src/controller/: const_labyrinth.hpp  labyrinth.hpp  path.cpp  path.hpp  path_finding.cpp  path_finding.hpp  robot_controller.cpp
src/AMPER/src/navigation/: navigator.cpp
src/AMPER/urdf/: labyrinth.xml  robot.gazebo  robot.urdf
src/AMPER/world/: labyrinth.world
src/controller/: labyrinth.cpp  labyrinth.hpp  path.hpp  path_finding.hpp  robot_controller.cpp
urdf/: empty_world_with_cube.xml  robot.gazebo  robot.urdf
